--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de texto</title>
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="shortcut icon" href="/imagenes/icono.png" type="image/x-icon">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="shortcut icon" href="imagenes/icono.png" type="image/x-icon">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 
@@ -13,7 +13,7 @@
 <body>
     <div class="contenedor">
         <header  >
-            <img class="logo_container" src="/imagenes/logo-alura.png" alt="Logo de alura">
+            <img class="logo_container" src="imagenes/logo-alura.png" alt="Logo de alura">
         </header>
         <div class="incriptar">
             <textarea 
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="encriptado">
-            <img src="/imagenes/Muñeco.png" alt="" id="personaje">
+            <img src="imagenes/Muñeco.png" alt="" id="personaje">
             <div class="mensaje_incriptado" id="mensaje_incriptado">
                 <h2 id="titulo_mensaje"> Ningun mensaje fue encontrado</h2>
                 <p id="parrafo">Ingresa texto que deseas encriptar o  desencriptar</p>
@@ -40,7 +40,7 @@
             <button id="boton_cp" class="boton_copiar" type="button" onclick="copiar()" disabled>Copiar</button>
         </div>
     </div>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
         <footer class="footer">
         <p> Desarrollado por David Martinez </p>
     </footer>
