--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Encriptador de texto</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="shortcut icon" href="imagenes/icono.png" type="image/x-icon">
+    <link rel="stylesheet" href="style/fonts/fonts.css">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 
