--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 
 </head>
-<body>
-    <div class="contenedor">
+<body class="content">
+    <div >
         <header  >
             <img class="logo_container" src="imagenes/logo-alura.png" alt="Logo de alura">
         </header>
